Bug 702776 - Missing margin in the highlighter and web console buttons; r=msucan,dao
UltraBlame original commit: 9f68a7bd5abe9765933d91be9bac3d7c895a657c

--- a/toolkit/themes/gnomestripe/global/webConsole.css
+++ b/toolkit/themes/gnomestripe/global/webConsole.css
@@ -1001,6 +1001,19 @@ webconsole
 filter
 -
 button
+{
+margin
+:
+0
+3px
+;
+}
+.
+webconsole
+-
+filter
+-
+button
 >
 .
 toolbarbutton
